# chess

./: CMakeLists.txt  README.md
app/: main.cc  main.cpp
assets/fens/: start.fen
include/: ActionMask.h  BoardState.h  Display.h  FenReader.h  Match.h  Mouse.h  PairHash.h  Piece.h  PositionMap.h  SelectionState.h  TextureManager.h  bishop.hpp  board.hpp  fen.hpp  king.hpp  knight.hpp  menu.hpp  movement_mask.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  state_manager.hpp  texture_manager.hpp  uuid.hpp
src/: ActionMask.cc  BoardState.cc  Display.cc  FenReader.cc  Mouse.cc  Piece.cc  PositionMap.cc  SelectionState.cc  TextureManager.cc  board.cpp  fen.cpp  menu.cpp  movement_mask.cpp  piece.cpp  state_manager.cc  texture_manager.cpp  uuid.cpp
